--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <P>KELAS:XI RPL A</P>
     <P>HOBI:MANCING</P>
     <p>ALAMAT:JL.GRINDULU Gg 7</p>
-    <img src="img..jpeg" alt="" srcset="">
+    <img src="WhatsApp Image 2025-07-31 at 21.06.26.jpeg" alt="" srcset="">
     <button onclick="alert(');">KLIK EN</button>
     <a href="http:novan.com//">.com</a>
 </body>
